@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.017002 at Sun Aug 17 08:24:00 2014
+; vim: syntax=dosini
 name             = Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
