@@ -348,10 +348,10 @@ sub dist_ini_meta_ok {
   return unless my $dmeta = $self->dist_ini_meta;
   my $assert = $self->_pc;
   my (@wanted_regex) = (
-    qr/bumpversions\s*=\s*1/,        qr/toolkit\s*=\s*eumm/,
-    qr/toolkit_hardness\s*=\s*soft/, qr/copyfiles\s*=.*LICENSE/,
-    qr/srcreadme\s*=.*/,             qr/copyright_holder\s*=.*<[^@]+@[^>]+>/,
-    qr/twitter_extra_hash_tags\s*=\s*#/,
+    qr/bumpversions\s*=\s*1/,            qr/toolkit\s*=\s*eumm/,
+    qr/toolkit_hardness\s*=\s*soft/,     qr/copyfiles\s*=.*LICENSE/,
+    qr/srcreadme\s*=.*/,                 qr/copyright_holder\s*=.*<[^@]+@[^>]+>/,
+    qr/twitter_extra_hash_tags\s*=\s*#/, qr/;\s*vim:\s+.*syntax=dosini/,
   );
   my (@unwanted_regex) = (
     #
